--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,4 +1,7 @@
-p{
-    font-size: 40px;
-    font-weight: 600;
+body{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20rem;
 }
